# tactic-mesh

./: README.md  pyproject.toml
attention/: latent_attention.py
cli/: main.py
core/: proof_state.py  router.py
experts/: base.py
lean/: verifier.py
network/: dht.py  proof_cache.py
training/: rl.py
