[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tactic-mesh"
version = "0.1.0"
description = "Decentralized Mixture-of-Tactics for Formal Theorem Proving"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "yurekami"}
]
keywords = [
    "theorem-proving",
    "formal-verification",
    "mixture-of-experts",
    "lean4",
    "deep-learning",
    "distributed",
    "p2p",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "hivemind>=1.1.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
lean = [
    "pylean>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
all = [
    "tactic-mesh[lean,dev]",
]

[project.scripts]
tactic-mesh = "cli.main:main"

[project.urls]
Homepage = "https://github.com/yurekami/tactic-mesh"
Repository = "https://github.com/yurekami/tactic-mesh"

[tool.setuptools.packages.find]
include = ["core*", "experts*", "attention*", "network*", "lean*", "training*", "cli*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
